Managed to fix db and web docker containers

--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -23,9 +23,9 @@ ENV container docker
 EXPOSE 5665
 
 # Add Tini
-ENV TINI_VERSION v0.17.0
-ADD https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini /tini
-RUN chmod +x /tini
-ENTRYPOINT ["/tini", "--"]
+#ENV TINI_VERSION v0.17.0
+#ADD https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini /tini
+#RUN chmod +x /tini
+#ENTRYPOINT ["/tini", "--"]
 
 CMD ["/usr/lib64/icinga2/sbin/icinga2", "daemon"]
